--- a/src/assets/css/DashBoard.module.css
+++ b/src/assets/css/DashBoard.module.css
@@ -9,7 +9,7 @@
     align-items: center; */
 }
 
-button {
+/* button {
     height: 90px;
     min-width: 250px;
     border-radius: 20px;
@@ -23,7 +23,46 @@ button:hover {
     transform: scale(1.1);
     box-shadow: 5px 5px 5px red;
     opacity: .9;
+} */
+button {
+    background-color: #6200ea;
+    color: white;
+    padding: 25px 40px;
+    min-width: 250px;
+    border: none;
+    border-radius: 25px;
+    font-size: 18px;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    transition: background-color 0.3s ease;
 }
+
+button:before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 300%;
+    height: 300%;
+    background: rgba(255, 255, 255, 0.3);
+    border-radius: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    transition: transform 0.5s ease;
+    z-index: 0;
+    transition: scale .2s, transform .2s;
+}
+
+button:hover:before {
+    transform: translate(-50%, -50%) scale(1);
+}
+
+button:hover {
+    background-color: #3700b3;
+    transform: scale(1.2);
+    box-shadow: 5px 5px 5px red;
+}
+
 
 .wrapper {
     display: flex;
