--- a/src/assets/css/ModuleTable.module.css
+++ b/src/assets/css/ModuleTable.module.css
@@ -7,6 +7,9 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     background-color: rgb(239, 135, 152);
     /* Đổ bóng cho container */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .table {
